tests/NormalTests/paczka1/fuzzy1/25761662.err
Error in line 2: A993 A993 12,9
Error in line 5: ZbuoEjzO A993 49,2
Error in line 8: ZbuoEjzO A755 53,2
Error in line 13: z10PITpiD A418 250,1
Error in line 27: Tx7 S863 68,0
